--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1239,6 +1239,9 @@ select {
 .inline-flex {
 	display: inline-flex;
 }
+.table {
+	display: table;
+}
 .table-row {
 	display: table-row;
 }
@@ -1450,6 +1453,9 @@ select {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+.break-all {
+	word-break: break-all;
 }
 .rounded-md {
 	border-radius: 0.375rem;
